Fixed footer height problem causing pages to be bigger than expected + changed Search input border color in Blog for visibility + replaced Home link in navbar by Claim link

--- a/components/Footer/footer.module.scss
+++ b/components/Footer/footer.module.scss
@@ -12,9 +12,8 @@
 
 .iconContainer {
   display: flex;
-  flex: 0.4;
-  justify-content: center;
-  align-items: center;
+  flex: 0.5;
+  align-items: flex-end;
   gap: 20px;
   margin-inline: auto;
 }
@@ -26,7 +25,7 @@
 
 .copyright {
   display: flex;
-  flex: 0.6;
+  flex: 0.5;
   justify-content: center;
   align-items: center;
   color: #747474;
