--- a/components/Layout/layout.module.scss
+++ b/components/Layout/layout.module.scss
@@ -3,5 +3,4 @@
 .children {
   min-height: calc(100vh - $footerHeight);
   padding-top: $navbarHeight;
-  padding-bottom: 50px;
 }
